Fix: Fix content covering footer

--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,5 @@
 .about {
     margin: 40px;
-    height: 100vh;
 }
 
 .title {
